# TicTacToe

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: field.h  logic.h  menu.h  utils.h
src/: field.cpp  logic.cpp  main.cpp  menu.cpp  utils.cpp
